======================
    ADDED: ctrl-up arrow (from the panel) goes up to the origin bar
	 ADDED: New commandline option: --profile <panel-profile>
    ADDED: Heiner's selection mode patch. Still alpha.
    ADDED: Ukrainian translation (thanks Ivan Petrouchtchak)
    ADDED: disk usage tool (alpha version)
    ADDED: vertical krusader: hit alt+ctrl+v to test
    ADDED: extra information in the totals bar 
    FIXED: useraction: Crash when filename  contained brackets '(...)'
    FIXED: world-class-annoying-bug when sometimes while using quicksearch,
           the file that was selected by quicksearch got hidden beneath the bar
    FIXED: mime types are shown only in english
    FIXED: when using quicksearch, current item wasn't visible
    FIXED: a crash when packing/unpacking to partial URL 
  
  UPDATED: Hungarian translation (thanks Arpad Biro)
  UPDATED: German translation

  
1.50   
====================== 
    FIXED: mountman now blocks and wait for mount/umount to complete
    FIXED: sorting got borked because locale-aware-compare isn't handling files
           that start with '.' well
    FIXED: possible opendir leakage, fish works only when moving the mouse
    FIXED: taken KDE's KDiskFreeSp class to optimize DF handling
    FIXED: Krusader overloads the CPU with panel refreshing
    FIXED: Wrong Danish language code (dk.po->da.po)
  
  UPDATED: Catalan translation (thanks Quim Perez)
  UPDATED: Italian translation (thanks Giuseppe Bordoni)
  UPDATED: Bulgarian translation (thanks Milen Ivanov)
  UPDATED: Slovak translation (thanks Zdenko Podobny)
  UPDATED: Hungarian translation (thanks Arpad Biro)
  UPDATED: German translation
  UPDATED: Dutch translation (thanks Frank Schoolmeesters)


1.50-beta1
======================
    ADDED: if view is human-readable, status bar is normal (bytes) and vice
           versa
    ADDED: Human-readable file sizes is implemented
           (located in look&feel->panel)