@@ -3,6 +3,8 @@ It should contain a brief description of new features;
 in some way an extension to the changelog.
 ------------------------------------------------------
 
+Total-commander refresh: when krusader isn't focused, it is not refreshed at all.
+
 Pressing ctrl-up arrow from the panel, jumps to the origin bar
 
 >-------------------- 1.50 --------------------------<
