@@ -114,6 +114,8 @@ public slots:
 	void slotItemAdded(vfile *vf);
 	void slotItemDeleted(const QString& name);
 	void slotItemUpdated(vfile *vf);
+	void panelActive(); // called when the panel becomes active
+	void panelInactive(); // called when panel becomes inactive
 	
 
    ///////////////////////// service functions - called internally ////////////////////////
