@@ -186,6 +186,7 @@ bool vfs::vfs_refresh(const KURL& origin){
 }
 
 void vfs::vfs_enableRefresh(bool enable){
+	if (disableRefresh == !enable) return; // if gets called twice by mistake
 	disableRefresh = quietMode = !enable;
   if( enable && dirty ) vfs_refresh();
 	dirty = false;
