@@ -1,6 +1,7 @@
 ======================
+    ADDED: Total-commander style refresh (at last)
     ADDED: ctrl-up arrow (from the panel) goes up to the origin bar
-	 ADDED: New commandline option: --profile <panel-profile>
+    ADDED: New commandline option: --profile <panel-profile>
     ADDED: Heiner's selection mode patch. Still alpha.
     ADDED: Ukrainian translation (thanks Ivan Petrouchtchak)
     ADDED: disk usage tool (alpha version)
